<resources>
    <string name="app_name">LetsChat</string>
    <string name="name_hint">Enter your name</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="confirm_password">Enter your password again</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="type_message">Type Message</string>

</resources>